Fix transfer funds protocol

--- a/currencyii/src/main/res/layout/fragment_shared_wallet_transaction.xml
+++ b/currencyii/src/main/res/layout/fragment_shared_wallet_transaction.xml
@@ -96,6 +96,11 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
+                    <TextView
+                        android:id="@+id/alert_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -108,6 +113,7 @@
                             android:text="Address" />
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/input_bitcoin_public_key"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Bitcoin Public Address" />
@@ -119,6 +125,7 @@
                         android:layout_height="match_parent">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/input_satoshi_amount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Amount of Satoshi" />
