--- a/trustchain-trader/src/main/res/layout/fragment_trader.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_trader.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:checked="true"
         android:text="Trader"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -97,16 +98,64 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/titlePayloadList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/divider2"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        android:paddingVertical="10dp"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Accepted"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Declined"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/Transactions"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="165dp"
-        android:gravity="top"
-        android:orientation="vertical">
-
-        <ListView
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/titlePayloadList"
+        app:layout_constraintTop_toBottomOf="@id/titlePayloadList"
+        android:weightSum="2"
+        android:orientation="horizontal">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/acceptedPayloads"
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/declinedPayloads"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgEmpty"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:tint="@color/mild_gray"
+        app:srcCompat="@drawable/ic_grid_off_black_24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/titlePayloadList"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
