Remove insert field public key

--- a/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
+++ b/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
@@ -23,8 +23,8 @@
     <fragment
         android:id="@+id/peerFragment"
         android:name="nl.tudelft.trustchain.trader.ui.peers.PeersFragment"
-        android:label="Peer Fragment"
-        tools:layout="@layout/fragment_peers" >
+        android:label="Choose peer to send money"
+        tools:layout="@layout/fragment_peers">
         <action
             android:id="@+id/action_peerFragment_to_transferFragment"
             app:destination="@id/transferFragment" />
@@ -69,17 +69,6 @@
     </fragment>
 
     <fragment
-        android:id="@+id/transferSendFragment"
-        android:name="nl.tudelft.trustchain.trader.ui.transfer.TransferSendFragment"
-        android:label="TransferSendFragment" >
-        <action
-            android:id="@+id/action_transferSendFragment_to_transferConfirmationFragment"
-            app:destination="@id/transferConfirmationFragment" />
-        <action
-            android:id="@+id/action_transferSendFragment_to_transferFragment"
-            app:destination="@id/transferFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/AI_HistoryFragment"
         android:name="nl.tudelft.trustchain.trader.ui.AI_HistoryFragment"
         android:label="AI History"
@@ -93,6 +82,6 @@
     <fragment
         android:id="@+id/blocksFragment"
         tools:layout="@layout/fragment_blocks"
-        android:name="nl.tudelft.trustchain.trader.ui.trader_blocks.BlocksFragment"
+        android:name="nl.tudelft.trustchain.trader.ui.trader_blocks.MarketBlocksFragment"
         android:label="Market Blocks" />
 </navigation>
