--- a/trustchain-trader/src/main/res/layout/fragment_transfer.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_transfer.xml
@@ -98,14 +98,15 @@
             android:orientation="horizontal"
             android:layout_marginBottom="30dp">
 
-            <EditText
+            <TextView
                 android:id="@+id/editTxtAddress"
                 android:gravity="start"
                 android:layout_weight="1"
+                android:paddingVertical="15dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:hint="Enter Address" />
+                android:hint="Scan Address" />
 
             <Button
                 android:id="@+id/btnScanPk"
