--- a/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
+++ b/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
@@ -10,16 +10,27 @@
         android:name="nl.tudelft.trustchain.trader.ui.TraderFragment"
         android:label="Trader"
         tools:layout="@layout/fragment_trader" >
+        <action
+            android:id="@+id/action_traderFragment_to_AI_HistoryFragment"
+            app:destination="@id/AI_HistoryFragment"
+            app:enterAnim="@anim/fragment_fade_enter"
+            app:exitAnim="@anim/fragment_fade_exit" />
+        <action
+            android:id="@+id/action_traderFragment_to_blocksFragment"
+            app:destination="@id/blocksFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/peerFragment"
         android:name="nl.tudelft.trustchain.trader.ui.peers.PeersFragment"
-        android:label="Peer Fragment"
-        tools:layout="@layout/fragment_peers" >
+        android:label="Choose peer to send money"
+        tools:layout="@layout/fragment_peers">
         <action
             android:id="@+id/action_peerFragment_to_transferFragment"
             app:destination="@id/transferFragment" />
+        <action
+            android:id="@+id/action_peerFragment_to_blocksFragment"
+            app:destination="@id/blocksFragment" />
     </fragment>
 
     <fragment
@@ -58,14 +69,19 @@
     </fragment>
 
     <fragment
-        android:id="@+id/transferSendFragment"
-        android:name="nl.tudelft.trustchain.trader.ui.transfer.TransferSendFragment"
-        android:label="TransferSendFragment" >
+        android:id="@+id/AI_HistoryFragment"
+        android:name="nl.tudelft.trustchain.trader.ui.AI_HistoryFragment"
+        android:label="AI History"
+        tools:layout="@layout/fragment_ai_history" >
         <action
-            android:id="@+id/action_transferSendFragment_to_transferConfirmationFragment"
-            app:destination="@id/transferConfirmationFragment" />
-        <action
-            android:id="@+id/action_transferSendFragment_to_transferFragment"
-            app:destination="@id/transferFragment" />
+            android:id="@+id/action_AI_HistoryFragment_to_traderFragment"
+            app:destination="@id/traderFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
     </fragment>
+    <fragment
+        android:id="@+id/blocksFragment"
+        tools:layout="@layout/fragment_blocks"
+        android:name="nl.tudelft.trustchain.trader.ui.trader_blocks.MarketBlocksFragment"
+        android:label="Market Blocks" />
 </navigation>
