--- a/FOC/src/main/res/layout/content_main_activity_foc.xml
+++ b/FOC/src/main/res/layout/content_main_activity_foc.xml
@@ -69,8 +69,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="430dp"
         android:ems="10"
-        android:hint="Enter magnet link/torrent name"
-        android:inputType="textPersonName" />
+        android:hint="Enter magnet link/torrent name. Empty = default"
+        android:inputType="textPersonName"
+        android:textSize="14sp" />
 
     <ScrollView
         android:id="@+id/scrollView"
