--- a/FOC/src/main/res/layout/content_main_activity_foc.xml
+++ b/FOC/src/main/res/layout/content_main_activity_foc.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="195dp"
         android:layout_marginTop="500dp"
         android:layout_marginRight="0dp"
-        android:text="UPLOAD TORRENT" />
+        android:text="EXECUTE CODE FROM JAR" />
 
     <Button
         android:id="@+id/downloadMagnet"
