Navigation fix for login screen and main dashboard

--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/daoLoginChoice">
+    app:startDestination="@id/bitcoinFragment">
 
     <fragment
         android:id="@+id/bitcoinFragment"
@@ -103,7 +103,9 @@
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
+            app:popExitAnim="@anim/fragment_fade_exit"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/bitcoinFragment"/>
     </fragment>
     <fragment
         android:id="@+id/mySharedWalletsFragment"
