--- a/FOC/src/main/res/layout/content_main_activity_foc.xml
+++ b/FOC/src/main/res/layout/content_main_activity_foc.xml
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="false"
         android:layout_marginLeft="195dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="550dp"
         android:layout_marginRight="0dp"
         android:text="EXECUTE CODE FROM JAR" />
 
@@ -45,7 +45,7 @@
         android:layout_alignLeft="@id/progressBar"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="false"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="550dp"
         android:text="Greet Other Peers" />
 
 
@@ -70,6 +70,17 @@
         android:layout_marginTop="430dp"
         android:ems="10"
         android:hint="Enter magnet link/torrent name. Empty = default"
+        android:inputType="textPersonName"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/enterJar"
+        android:layout_width="343dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/enterTorrent"
+        android:layout_marginTop="480dp"
+        android:ems="10"
+        android:hint="Enter name of jar/apk to execute. Empty = default"
         android:inputType="textPersonName"
         android:textSize="14sp" />
 
