Add a simple version of TrustChain interactions

--- a/musicdao/src/main/res/layout/fragment_blank.xml
+++ b/musicdao/src/main/res/layout/fragment_blank.xml
@@ -5,10 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".BlankFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_items"
-        android:scrollbars="vertical"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/sendProposalButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send proposal block" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </LinearLayout>
 
 </FrameLayout>
