--- a/currencyii/src/main/res/layout/fragment_dao_login_choice.xml
+++ b/currencyii/src/main/res/layout/fragment_dao_login_choice.xml
@@ -5,7 +5,8 @@
     android:layout_margin="16dp"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="nl.tudelft.ipv8.android.demo.ui.bitcoin.DaoLoginChoice">
+    android:label="DAO Login Screen"
+    tools:context=".ui.bitcoin.DaoLoginChoice">
 
     <LinearLayout
         android:layout_width="match_parent"
