Update app icon

--- a/currencyii/src/main/res/layout/activity_main.xml
+++ b/currencyii/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="nl.tudelft.trustchain.currencyii.MainActivity">
+    tools:context="nl.tudelft.trustchain.currencyii.CurrencyIIMainActivity">
 
     <!--androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
