--- a/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
+++ b/trustchain-payloadgenerator/src/main/res/navigation/nav_graph_payloadgenerator.xml
@@ -23,6 +23,8 @@
             android:id="@+id/action_payloadCreateFragment_to_payloadFragment"
             app:destination="@id/payloadFragment"
             app:enterAnim="@anim/fragment_close_enter"
-            app:exitAnim="@anim/fragment_close_exit" />
+            app:exitAnim="@anim/fragment_close_exit"
+            app:popUpTo="@id/payloadFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
