--- a/trustchain-trader/src/main/res/layout/fragment_trader.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_trader.xml
@@ -130,9 +130,9 @@
     <LinearLayout
         android:id="@+id/Transactions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/titlePayloadList"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/titlePayloadList"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:weightSum="2"
         android:orientation="horizontal">
         <androidx.recyclerview.widget.RecyclerView
@@ -158,6 +158,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/titlePayloadList"
         app:layout_constraintBottom_toBottomOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
