WIP: Add new bottomnav destinations + add logout button

--- a/currencyii/src/main/res/menu/currencyii_bottom_navigation_menu.xml
+++ b/currencyii/src/main/res/menu/currencyii_bottom_navigation_menu.xml
@@ -4,5 +4,13 @@
     <item
         android:id="@+id/bitcoinFragment"
         android:title="@string/dao_overview"
-        android:icon="@drawable/ic_bitcoin" />
+        android:icon="@drawable/ic_home_black_24dp" />
+    <item
+        android:id="@+id/myWallet"
+        android:title="@string/my_wallet"
+        android:icon="@drawable/ic_account_balance_wallet_black_24dp" />
+    <item
+        android:id="@+id/myDAOsFragment"
+        android:title="@string/my_daos"
+        android:icon="@drawable/ic_group_work_black_24dp" />
 </menu>
