--- a/currencyii/src/main/res/navigation/nav_graph.xml
+++ b/currencyii/src/main/res/navigation/nav_graph.xml
@@ -103,7 +103,7 @@
     <fragment
         android:id="@+id/blockchainDownloadFragment"
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.BlockchainDownloadFragment"
-        android:label="Bitcoin Download Progress"
+        android:label="Bitcoin Blockchain Download"
         android:layout="@layout/fragment_blockchain_download"
         app:startDestination="@id/action_blockchainDownloadFragment_to_bitcoinFragment">
         <action
@@ -155,4 +155,9 @@
         android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.ImportKeysFragment"
         android:label="Import Keys"
         tools:layout="@layout/fragment_import_keys" />
+    <fragment
+        android:id="@+id/myDAOsFragment"
+        android:name="nl.tudelft.trustchain.currencyii.ui.bitcoin.MyDAOsFragment"
+        android:label="fragment_my_daos"
+        tools:layout="@layout/fragment_my_daos" />
 </navigation>
