Start vote from app

--- a/voting/src/main/res/layout/activity_main_voting.xml
+++ b/voting/src/main/res/layout/activity_main_voting.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".VotingActivity"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="354dp"
-        android:layout_height="48dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
-        android:max="100"
-        android:progress="0"
-        android:visibility="visible" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/startVoteButton"
-        android:layout_width="129dp"
-        android:layout_height="105dp"
-        android:layout_alignParentLeft="@id/progressBar"
-        android:layout_centerHorizontal="false"
-        android:layout_centerVertical="false"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="300dp"
-        android:text="Start vote!" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="158dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="159dp"
+            android:text="@string/ongoing_votes"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/castVoteButton"
-        android:layout_width="129dp"
-        android:layout_height="105dp"
-        android:layout_alignParentBottom="@id/progressBar"
-        android:layout_centerHorizontal="false"
-        android:layout_centerVertical="false"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="300dp"
-        android:text="Cast vote!" />
+        <Button
+            android:id="@+id/initiateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/initiate_vote"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/tallyVoteButton"
-        android:layout_width="129dp"
-        android:layout_height="105dp"
-        android:layout_alignRight="@id/progressBar"
-        android:layout_centerHorizontal="false"
-        android:layout_centerVertical="false"
-        android:layout_marginLeft="195dp"
-        android:layout_marginTop="300dp"
-        android:text="Tally votes!" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="365dp"
+            android:layout_height="572dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginBottom="28dp"
+            app:layout_constraintBottom_toTopOf="@+id/initiateButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </android.widget.RelativeLayout>
