--- a/voting/src/main/res/layout/vote_block.xml
+++ b/voting/src/main/res/layout/vote_block.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tvAnimalName"
+    android:id="@+id/voting_block_prop"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="20sp" />
+    android:paddingTop="10px"
+    android:paddingBottom="10px"
+    android:text="subject"
+    android:textSize="24sp" />
 
