--- a/currencyii/src/main/res/layout/fragment_create_sw.xml
+++ b/currencyii/src/main/res/layout/fragment_create_sw.xml
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/alert_label"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="" />
 
